@@ -1,3 +1,6 @@
+Upcoming:
+- The advanced porter gui works again
+
 1.2.9-alpha:
 - Fixed a networking problem on servers
 
